<resources>
    <string name="appName">Unit Converter</string>
    <string name="tabMassText">Mass</string>
    <string name="tabDistanceText">Distance</string>
    <string name="tabTimeText">Time</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonOk">OK</string>
    <string name="button0">0</string>
    <string name="buttonCancel">C</string>
    <string name="buttonBackspace"><![CDATA[<-]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unitFrom">Value</string>
    <string name="unitTo">Converted value</string>
    <string name="buttonPeriod">.</string>
    <string name="textButtonSwap"><![CDATA[<-->]]></string>

    <string-array name="variantsMass">
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Tone</item>
    </string-array>

    <string-array name="variantsDistance">
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
    </string-array>

    <string-array name="variantsTime">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
    </string-array>


</resources>