<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal" >
    <Button android:text="@string/button0" />
    <Button android:text="@string/button1" />
    <Button android:text="@string/button2" />
    <Button
        android:text="@string/buttonBackspace"
        />
    <Button android:text="@string/button3" />
    <Button android:text="@string/button4" />
    <Button android:text="@string/button5" />
    <Button android:text="@string/buttonCancel" />
    <Button android:text="@string/button6" />
    <Button android:text="@string/button7" />
    <Button
        android:text="@string/button8"
        android:layout_columnSpan="2" />

    <Button android:text="@string/button9" />
    <Button
        android:text="@string/buttonOk"
        android:layout_gravity="fill"
        android:layout_columnSpan="3"/>

</GridLayout>