<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MassFragment">

    <TableRow>

        <EditText
            android:id="@+id/valueFrom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"

            android:maxLength="25"
            android:scrollHorizontally="true">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/valueTo"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="none"
            android:scrollHorizontally="true" />
    </TableRow>


    <TableRow>
        <TextView
            android:id="@+id/textFrom"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/unitFrom" />
<!--        TODO: add swap button in 'premium' build-->
        <TextView
            android:id="@+id/textTo"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/unitTo" />
    </TableRow>

<!--    TODO: id depends on entity-->
    <GridLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content">
        <Spinner

            android:id="@+id/spinnerFromMassVariants"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>

        <Spinner

            android:id="@+id/spinnerToMassVariants"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>
    </GridLayout>

    <GridLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:columnCount="4"
        android:orientation="horizontal" >
        <Button android:text="@string/button0" />
        <Button android:text="@string/button1" />
        <Button android:text="@string/button2" />
        <Button
            android:text="@string/buttonBackspace"
            />
        <Button android:text="@string/button3" />
        <Button android:text="@string/button4" />
        <Button android:text="@string/button5" />
        <Button android:text="@string/buttonCancel" />
        <Button android:text="@string/button6" />
        <Button android:text="@string/button7" />
        <Button
            android:text="@string/button8"
            android:layout_columnSpan="2" />

        <Button android:text="@string/button9" />
        <Button
            android:text="@string/buttonOk"
            android:layout_gravity="fill"
            android:layout_columnSpan="2"/>

    </GridLayout>
</TableLayout>